<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_dashboard"
        android:icon="@drawable/ic_dashboard"
        android:title="@string/nav_dashboard" />

    <item
        android:id="@+id/nav_projects"
        android:icon="@drawable/ic_folder"
        android:title="@string/nav_projects" />

    <item
        android:id="@+id/nav_goals"
        android:icon="@drawable/ic_goals"
        android:title="@string/nav_goals" />

    <item
        android:id="@+id/nav_leaderboard"
        android:icon="@drawable/ic_leaderboard"
        android:title="@string/nav_leaderboard" />

    <item
        android:id="@+id/nav_insights"
        android:icon="@drawable/ic_insights"
        android:title="@string/nav_insights" />

</menu>